# aind-registration_evaluation

./: README.md  pyproject.toml
doc_template/source/: conf.py
scripts/: evaluation_2D.py  evaluation_example.py  evaluation_example_misalignment.py  evaluation_example_rqa.py  key_points_detector_demo.ipynb  keypoints_detector.py  xml_parser.py
src/aind_registration_evaluation/: __init__.py  main.py  main_qa.py
src/aind_registration_evaluation/io/: _io.py  utils.py
src/aind_registration_evaluation/metric/: __init__.py  _metric.py  factory.py  large_scale.py  small_scale.py
src/aind_registration_evaluation/sample/: __init__.py  sample_points.py  utils.py
src/aind_registration_evaluation/util/: __init__.py  intersection.py  validation.py  visualization.py
src/eval_reg/: default_config.yaml  eval_stitching.py  io_utils.py  iotools.py  metrics.py  params.py  utils.py  xml_parser.py
tests/: test_message_handler.py
