[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eval_reg"
description = "Evaluates registration."
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
  'pandas',
  'sphinx',
  'aicsimageio',
  'argschema',
  'scikit-image',
  'ome-zarr',
  'argschema',
  'matplotlib',
  'numpy',
  'zarr',
  'scikit-learn',
  'pims',
  'tifffile',
  'phasepack',
  'pyfftw'
]

[project.optional-dependencies]
dev = [
  'black',
  'coverage',
  'flake8',
  'interrogate',
  'isort',
  'pygit2',
  'Sphinx'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "eval_reg.__version__"}
readme = {file = ["README.md"]}

[tool.black]
line-length = 79
target_version = ['py36']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["eval_reg", "tests"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
fail_under = 100

[tool.isort]
line_length = 79

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 80
